2025 02 17 수업 내용  Spring Get Set Post Delite

--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ repositories {
     mavenCentral()
 }
 
-dependencies {//여기가 라이브러리 부분
+dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
