2025 02 26 수업 마이바티스 및 동적쿼리

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,8 @@ spring.datasource.password=1234
 # resources 폴더 하위에 mybatis폴더 생성 --> mapper폴더 생성
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
 
+#*[4] 스프링이 서버 실행할때 sql 파일 자동으로 읽어드리는 설정
+# schema.sql 과 data.sql 파일 실행한다.
+spring.sql.init.mode = always  
+#spring.sql.init.mode = never   # schema.sql과 data.sql 파일 실행 안한다.
+#spring.sql.init.mode = always  #(기본값) 내장 데이터베이스(H2)만 실행하고 외부 데이터베이스에서는 실행을 안한다
