2025 03월 17일 스프링 파일업로드 및 삭제, 세션사용 수업

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,12 +13,28 @@ spring.datasource.username=root
 #3 연동할 JDBC 계정 비밀번호, 띄어쓰기 포함하므로 주의
 spring.datasource.password=1234
 
+
+#================================================================ 위가 db 연동
+
+
+
+
+
+
 # [3] 마이바티스 .xml 파일의 경로 설정 , classpath( src -> main -> resources 뜻)
 # resources 폴더 하위에 mybatis폴더 생성 --> mapper폴더 생성
-mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+#mybatis.mapper-locations=classpath:mybatis/mapper/*.xml   // DB를 data schema로 사용 아래 코드가 사용됨
+
+
+
+
+#================================================================ 초기 sql 실행여부는 아래쪽 data.sql, schema 사용
 
 #*[4] 스프링이 서버 실행할때 sql 파일 자동으로 읽어드리는 설정
 # schema.sql 과 data.sql 파일 실행한다.
 spring.sql.init.mode = always  
 #spring.sql.init.mode = never   # schema.sql과 data.sql 파일 실행 안한다.
 #spring.sql.init.mode = always  #(기본값) 내장 데이터베이스(H2)만 실행하고 외부 데이터베이스에서는 실행을 안한다
+
+
+#--- 나중에 배포할때는 never로  여기서 실행 하는것 연동만 해놓으면 됨
