2025 03월 18일 파일첨부 이미지 미리보기 및

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,9 +32,17 @@ spring.datasource.password=1234
 
 #*[4] 스프링이 서버 실행할때 sql 파일 자동으로 읽어드리는 설정
 # schema.sql 과 data.sql 파일 실행한다.
-spring.sql.init.mode = always  
+spring.sql.init.mode = always
 #spring.sql.init.mode = never   # schema.sql과 data.sql 파일 실행 안한다.
 #spring.sql.init.mode = always  #(기본값) 내장 데이터베이스(H2)만 실행하고 외부 데이터베이스에서는 실행을 안한다
 
 
 #--- 나중에 배포할때는 never로  여기서 실행 하는것 연동만 해놓으면 됨
+
+
+
+# [5] multipartFile 사용시 *용량 제한 설정 (개별 : 1MB , 전체 : 10MB)
+# -1 : 제한없음(무제한 용량)
+spring.servlet.multipart.max-file-size= 100MB
+spring.servlet.multipart.max-request-size= 100MB
+# server.tomcat.max-swallow-size = -1
