--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     //[5] 사용자 정의 AOP 라이브러리
     implementation 'org.springframework.boot:spring-boot-starter-aop'
 
+    //[6] 비크립트 알고리즘 라이브러리 (암호화 알고리즘)
+    implementation 'org.springframework.security:spring-security-crypto:6.4.3'
+
+
 
 
 }
